# hash-benchmark-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs  util.rs
